--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <meta http-equiv="refresh" content="0; url=PhiUSIIL-Phishing-URL-DATA-REPORT.html">
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="PhiUSIIL-Phishing-URL-DATA-REPORT.html.html">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="PhiUSIIL-Phishing-URL-DATA-REPORT.html">click here</a>.</p>
 </body>
 </html>
